--- a/Teach2025/Views/MainWindow.xaml
+++ b/Teach2025/Views/MainWindow.xaml
@@ -36,15 +36,25 @@
                    FontSize="24" 
                    FontWeight="Bold" />
 
-        <StackPanel Grid.Column="0" 
-                    Grid.Row="1">
-        <TextBlock Text="Inhoud 1" 
-                   HorizontalAlignment="Center" 
-                   VerticalAlignment="Center" />
-        <TextBlock Text="Inhoud 2" 
-                   HorizontalAlignment="Center" 
-                   VerticalAlignment="Center" />
-        </StackPanel>
+       <StackPanel Grid.Row="1" Grid.Column="0">
+           <TextBlock>
+               <LineBreak/>
+               <LineBreak/>
+               <LineBreak/>
+           </TextBlock>
+           <RadioButton Content="Openen" 
+                        Height="50" 
+                        Foreground="#34143e" 
+                        FontSize="25"
+                        Style="{StaticResource MenuButtonTheme}"
+                        x:Name="MeldingenButton"/>
+           <RadioButton Content="Overhoren" 
+                        Height="50" 
+                        Foreground="#34143e" 
+                        FontSize="25"
+                        Style="{StaticResource MenuButtonTheme}"
+                        x:Name="WijzigingenButton"/>
+       </StackPanel>
         <StackPanel Grid.Row="0" 
                     Grid.Column="1" 
                     HorizontalAlignment="Right">
@@ -106,6 +116,22 @@
                 </Button>
                 </Grid>
         </StackPanel>
+       <Border BorderBrush="#34143e" 
+               Background="Azure"
+               Grid.Row="1" 
+               Grid.Column="1"  
+               BorderThickness="1" 
+               Padding="20" 
+               Margin="0,25,25,25" 
+               CornerRadius="20">
+          <Border.Effect>
+               <DropShadowEffect Color="#333333" 
+                                 BlurRadius="10" 
+                                 ShadowDepth="5" 
+                                 Opacity="0.5"/>
+           </Border.Effect>
+           <ContentControl x:Name="MainContent"/>
+       </Border>
     </Grid>
     </Border>
 </Window>
